# green-rs

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  rust.yml
docs/: api-reference.md  async-operations.md  async_command_runner.md  cli-integration.md  error-handling.md  error_handling.md  examples.md  getting-started.md  index.md  transaction-builder.md
examples/: async_cli_example.rs  basic_async.rs  basic_sync.rs  cli_error_handling.rs  tx_builder.rs  tx_builder_example.rs  utxo_management.rs  utxo_management_async.rs  wallet_example.rs
src/: client.rs  error.rs  lib.rs
src/api/: address.rs  builder.rs  mod.rs  subaccount.rs  transaction.rs  utxo.rs  wallet.rs
src/types/: README.md  address.rs  balance.rs  common.rs  mod.rs  subaccount.rs  transaction.rs  utxo.rs  wallet.rs
tests/: async_integration_test.rs  error_test.rs  types_test.rs  wallet.rs  wallet_test.rs
tests/fixtures/: balance_success.json  fee_estimates_success.json  green-cli
