[package]
name = "green-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation for green computing"
license = "MIT"
repository = "https://github.com/yourusername/green-rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
async-trait = "0.1"
futures = "0.3"

[dev-dependencies]
anyhow = "1"
assert_cmd = "2"
