[package]
name = "green-rs"
version = "0.1.3"
edition = "2021"
description = "A Rust implementation to interface into the Blockstream green-cli client for Bitcoin and the Liquid Network"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gmikeska/green-rs"
keywords = ["bitcoin", "cryptocurrency", "blockchain", "green", "api-client"]
categories = ["api-bindings", "cryptography::cryptocurrencies", "asynchronous"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
async-trait = "0.1"
futures = "0.3"
tempfile = "3.20.0"

[dev-dependencies]
anyhow = "1"
assert_cmd = "2"
predicates = "3"
